Selected menu items no longer have a font-weight: bold. This causes an issue where the <li> elements shift by 1px because of the font-weight adjustment. We could probably fix this by introducing box-sizing: border-box, but we'll add that in globally later, hopefully. For now, no more bolded text.
The blue hover for menu-items has been replaced by #eee (very light
grey). The blue seemed arbitrary, and didn't match with the rest of
Pure.

--- a/src/menus/css/menus.css
+++ b/src/menus/css/menus.css
@@ -35,9 +35,7 @@
 
 /* HOVER STATES */
 .pure-menu li a:hover {
-    background: #46b9e3;
-    color: #fff;
-
+    background: #eee;
 }
 
 /* DISABLED STATES */
@@ -70,7 +68,6 @@
 
 /* ACTIVE MENU ITEM */
 .pure-menu .pure-menu-selected a {
-    font-weight: bold;
     color: #000;
 }
 
